--- a/ACTIVITAT 3 - M09 - HTML  CSS/style.css
+++ b/ACTIVITAT 3 - M09 - HTML  CSS/style.css
@@ -248,4 +248,65 @@ footer {
     margin: 0;
 }
 
+/* MEDIA QUERYS */
 
+/* Tablets (máximo 768px) */
+@media (max-width: 768px) {
+    .fotos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+    }
+    header {
+        display: flex; 
+        justify-content: flex-start; 
+        align-items: center;
+        padding-left: 20px;
+    }
+}
+
+
+/* Móviles (máximo 576px) */
+@media (max-width: 576px) {
+    body, header, main, footer, .header-content, .sobrenos, .menu, .menu-content, .fotos, .contact-item, .sobrenos .contenido, .menu-content .imagenes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%; 
+    }
+    header {
+        display: flex; 
+        justify-content: flex-start; 
+        align-items: center;
+        padding-left: 20px;
+    }
+
+    .menu1 {
+        display: none;
+    }
+
+    #portada {
+        width: 100%; 
+    }
+
+    .menu h3 {
+        width: 100%; 
+    }
+
+    .izquierda, .derecha {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .derecha p {
+        display: none;
+    }
+
+    .fotos img {
+        width: 100%;
+        height: auto;
+        border: 2px solid #d8d0d0;
+    }
+
+
+}
