--- a/ACTIVITAT 3 - M09 - HTML  CSS/style.css
+++ b/ACTIVITAT 3 - M09 - HTML  CSS/style.css
@@ -38,7 +38,7 @@ header {
 /* Portada */
 #portada {
     position: relative;
-    background-image: url('imatges/sobrenos-local.jpg');
+    background-image: url('imatgesnoves/imagen1.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
