--- a/ACTIVITAT 3 - M09 - HTML  CSS/style.css
+++ b/ACTIVITAT 3 - M09 - HTML  CSS/style.css
@@ -19,6 +19,12 @@ header {
     justify-content: flex-end;
     padding: 20px 0;
     z-index: 10;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+header:hover {
+    background-color: #ffffff;
+    color: #000000;
 }
 
 .header-content {
@@ -190,13 +196,15 @@ header {
     max-width: 100%;
     height: auto;
     border: 2px solid #d8d0d0;
-  
+    transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
   }
 
   .fotos img:hover,
   .fotos img:focus {
     border-color: rgb(197, 196, 196); 
     filter: brightness(65%);
+    transform: scale(1.1) rotate(5deg);
+    filter: grayscale(50%);
 }
   
   .imagen2 img,
