--- a/ACTIVITAT 3 - M09 - HTML  CSS/style.css
+++ b/ACTIVITAT 3 - M09 - HTML  CSS/style.css
@@ -66,12 +66,32 @@ header:hover {
     position: relative;
     max-width: 600px; 
     margin-left: 20px; 
+    animation: animacio 1.5s ease-in-out forwards;
 }
 
 .portada-text h1 {
     position: relative;
     margin: 0;
 }
+/* Animación */
+@keyframes animacio {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+        color: orange;
+    }
+    80% {
+        opacity: 0.5;
+        transform: translateY(25px);
+        color: orange;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+        color: rgb(255, 255, 255);
+    }
+}
+
 
 .portada-text p {
     position: relative;
